--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
 
-  <title>React App</title>
+  <title>Sky Lamp</title>
 </head>
 
 <body>
